--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <a href="#" class="active">
                     <span class="material-icons-sharp">
                         insights
-                        </span>
-                        <h3>Analytics</h3>
+                    </span>
+                    <h3>Analytics</h3>
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">
@@ -91,7 +91,60 @@
             </div>
         </aside>
 
-        
+        <main>
+            <h1>Analytics</h1>
+            <div class="analyse">
+                <div class="sales">
+                        <div class="status">
+                            <div class="info">
+                                <h3>Total Sales</h3>
+                                <h1>$79,129</h1>
+                            </div>
+                            <div class="progresss">
+                                <svg>
+                                    <circle cx="38" cy="38" r="36"></circle>
+                                </svg>
+                                <div class="percentage">
+                                    <p>+91,2%</p>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+                <div class="searches">
+                    <div class="status">
+                        <div class="info">
+                            <h3>Seachers</h3>
+                            <h1>15.182</h1>
+                        </div>
+                        <div class="progresss">
+                            <svg>
+                                <circle cx="38" cy="38" r="36"></circle>
+                            </svg>
+                            <div class="percentage">
+                                <p>+12%</p>
+                            </div>
+                        </div>
+                </div>
+            </div>
+                <div class="visits">
+                    <div class="status">
+                        <div class="info">
+                            <h3>Site Visit</h3>
+                            <h1>29.129</h1>
+                        </div>
+                        <div class="progresss">
+                            <svg>
+                                <circle cx="38" cy="38" r="36"></circle>
+                            </svg>
+                            <div class="percentage">
+                                <p>-42,2%</p>
+                            </div>
+                        </div>
+                </div>
+            </div>
+            </div>
+        </main>
+
 
     </div>
 
