--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                     <circle cx="38" cy="38" r="36"></circle>
                                 </svg>
                                 <div class="percentage">
-                                    <p>+91,2%</p>
+                                    <p>+61,2%</p>
                                 </div>
                             </div>
                     </div>
@@ -137,12 +137,44 @@
                                 <circle cx="38" cy="38" r="36"></circle>
                             </svg>
                             <div class="percentage">
-                                <p>-42,2%</p>
+                                <p>-22,2%</p>
                             </div>
                         </div>
                 </div>
             </div>
             </div>
+
+            <div class="new-users">
+                <h2>New Users</h2>
+                <div class="user-list">
+                    <div class="user">
+                        <img src="img/person1.png" alt="person">
+                        <h2>Henry</h2>
+                        <p>49 Min Ago</p>
+                    </div>
+                    <div class="user">
+                        <img src="img/person2.png" alt="person">
+                        <h2>Oliver</h2>
+                        <p> 1 Hours Ago</p>
+                    </div>
+                    <div class="user">
+                        <img src="img/person3.png" alt="person">
+                        <h2>Sarah</h2>
+                        <p>2 Hours Ago</p>
+                    </div>
+                    <div class="user">
+                        <img src="img/person4.png" alt="person">
+                        <h2>Steve Jobs</h2>
+                        <p>4 Hours Ago</p>
+                    </div>
+                    <div class="user">
+                        <img src="img/plus.png" alt="person">
+                        <h2>More</h2>
+                        <p>New User</p>
+                    </div>
+                </div>
+            </div>
+
         </main>
 
 
